--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <meta property="og:url" content="https://cw.eastgrand.net">
     <meta name="twitter:card" content="summary_large_image">
     <title>Self Service Laundromat - Dallas, TX</title>
+    
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-K107CTDRXY"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-K107CTDRXY');
+    </script>
+    
     <link rel="stylesheet" href="styles.css">
     <script type="application/ld+json">
     {
